[package]
name = "bevy_ratatui"
description = "A Bevy plugin for building terminal user interfaces with Ratatui"
version = "0.10.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cxreiff/bevy_ratatui"
documentation = "https://docs.rs/bevy_ratatui"
authors = ["cxreiff <cooper@cxreiff.com>", "Joshka"]
categories = ["command-line-interface"]
keywords = ["cli", "ratatui", "terminal", "tui", "bevy"]

[dependencies]
bevy = { version = "0.17", default-features = false }
bitflags = "2.10.0"
color-eyre = "0.6.5"
ratatui = { version = "0.30.0", default-features = false }
smol_str = "0.3.4"
soft_ratatui = { version = "0.1", optional = true }
tracing = "0.1.44"

[dev-dependencies]
rand = "0.9.2"
bevy = { version = "0.17", default-features = false, features = ["bevy_state"] }
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["std", "async_executor", "crossterm"]
crossterm = ["ratatui/crossterm"]
windowed = ["dep:soft_ratatui", "bevy/default"]

# Features for `std` platforms
std = ["bevy/std"]
async_executor = ["bevy/async_executor"]

# Features for `no_std` platforms
libm = ["bevy/libm"]
critical-section = ["bevy/critical-section"]
